--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^12.2.2",
 		"axios": "^0.25.0",
 		"emailjs-com": "^3.2.0",
+		"node": "^19.6.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.6",
