--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.1",
 		"sweetalert2": "^11.6.14",
-		"web-vitals": "^0.2.4"
+		"web-vitals": "^0.2.4",
+		"webpack": "^4.44.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
