--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "4.0.0"
+		"react-scripts": "4.0.0",
+		"webpack": "^4.44.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
